k8s-dashboard/dashboard-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard

spec:
  entryPoints:
    - websecure
  tls:
    secretName: dashboard-tls
  routes:
    - kind: Rule
      match: Host(`k8s-dashboard.toki317.dev`)
      middlewares:
        - name: auth-admin
          namespace: traefik
      services:
        - kind: Service
          namespace: kubernetes-dashboard
          name: kubernetes-dashboard
          port: 80
          scheme: http
          strategy: RoundRobin
          weight: 1
